# email-triage

./: Dockerfile  README.md  baseline.py  client.py  emails.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py  grader.py
